refactor gathering_model / gathering_controller

--- a/public/404.html
+++ b/public/404.html
@@ -4,10 +4,10 @@
 <head>
     <title>toGather</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="styles/header_footer.css">
+    <link rel="stylesheet" type="text/css" href="https://alltogathers.com/styles/header_footer.css">
 
 
-    <link rel="stylesheet" type="text/css" href="styles/404.css">
+    <link rel="stylesheet" type="text/css" href="https://alltogathers.com/styles/404.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -42,7 +42,7 @@
             <div class="container-md" style="width: 90%; max-width: 90%; height:60px">
 
                 <a class="navbar-brand logo name" href="./index.html">
-                    <img src="./assets/new_logo2.png" alt="" height="35">
+                    <img src="https://alltogathers.com/assets/new_logo2.png" alt="" height="35">
                 </a>
                 <div id="main-header">
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
