fixed check expired gatherings mechanism

--- a/public/gathering.html
+++ b/public/gathering.html
@@ -231,6 +231,9 @@
                         <a class="btn " id="fullEvent" data-bs-toggle="button" autocomplete="off"
                             style="display: none;">名額已滿</a>
 
+                        <a class="btn " id="expiredEvent" data-bs-toggle="button" autocomplete="off"
+                            style="display: none;">活動已結束</a>
+
                     </div>
                 </div>
 
